front-end-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-service
  namespace: default
spec:
  selector:
    matchLabels:
      app: front-end-service
  template:
    metadata:
      labels:
        app: front-end-service
    spec:
      containers:
      - name: front-end-service
        image: matteogrellier/front-end-react:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
