database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: database
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
