front-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: front-end-service
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
