order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: default
spec:
  type: ClusterIP
  clusterIP: 10.96.0.20
  selector:
    app: order-service
  ports:
  - port: 3002
    protocol: TCP
    targetPort: 3002
