user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: default
spec:
  type: ClusterIP
  clusterIP: 10.96.0.10
  selector:
    app: user-service
  ports:
    - port: 3001
      targetPort: 3001
