ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicd-project-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: api.cicd-project.com
      http:
        paths:
          - path: /order-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-service-service
                port:
                  number: 3002
          - path: /user-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service-service
                port:
                  number: 3001
